# docker-dtv

./: .editorconfig  .hadolint.yaml  README.md  docker-compose.yml  mise.toml  renovate.json
.github/workflows/: chinachu.yml  dvbconf-for-isdb.yml  epgstation-custom-hwaccel.yml  epgstation-custom.yml  epgstation.yml  ffmpeg-alpine.yml  ffmpeg-debian.yml  ffmpeg-ubuntu.yml  isdb-scanner.yml  libaribb1.yml  lint-dockerfile.yml  lint-workflow.yml  lint-yaml.yml  mirakurun-client.yml  nvencc.yml  qsvencc.yml  recdvb.yml  recisdb-rs.yml  tsreadex.yml  tsselect.yml  vceencc.yml
Comskip/: Dockerfile  app.py  comskip.ini
chinachu/: Dockerfile  config.sample.json  services.sh
epgstation/: Dockerfile
mirakurun/: Dockerfile
mirakurun/conf/: tuners.yml
samba/: Dockerfile
src/chinachu/: Dockerfile  entrypoint.sh
src/dvbconf-for-isdb/: Dockerfile
src/epgstation/: Dockerfile  add-channel-type.patch  add-connection-field.patch  add-genre-guide-link.patch  add-ical-api.patch  add-links-in-navigation.patch  add-rule-title.patch  add-urlscheme-host.patch  expand-event-emitter-max-listeners.patch  extend-execution-timeout.patch
src/epgstation-custom/: Dockerfile
src/epgstation-custom-hwaccel/: Dockerfile
src/epgstation/migrations/: 0_channel_types.sql  1_rule_title.sql
src/ffmpeg/alpine/: Dockerfile
src/ffmpeg/debian/: Dockerfile
src/ffmpeg/ubuntu/: Dockerfile
src/isdb-scanner/: Dockerfile
src/libaribb1/: Dockerfile  b1-stream  b1.patch
src/mirakurun-client/: .dockerignore  Cargo.toml  Dockerfile  external-schema.json
src/mirakurun-client/check-services/: Cargo.toml
src/mirakurun-client/check-services/src/: cli.rs  discord.rs  main.rs  reporter.rs  state.rs
src/mirakurun-client/check-signal/: Cargo.toml  check_signal.sh
src/mirakurun-client/client/: Cargo.toml
src/mirakurun-client/client/src/: cli.rs  main.rs
src/mirakurun-client/common/: Cargo.toml
src/mirakurun-client/common/src/: config.rs  service.rs
src/nvencc/: Dockerfile
src/qsvencc/: Dockerfile
src/recdvb/: Dockerfile
src/recisdb-rs/: Dockerfile
src/tsreadex/: Dockerfile
src/tsselect/: Dockerfile
src/vceencc/: Dockerfile
storage_watcher/: Dockerfile  app.py
