[package]
name = "mirakurun-check-services"
version = "1.0.0"
authors = ["StarryBlueSky <letter@starry.blue>"]
edition = "2018"
publish = false

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
clap = { version = "3.2.25", features = ["derive", "env", "cargo"] }
mirakurun-client-common = { path = "../common" }
tokio = { version = "1.33.0", features = ["full"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
