[package]
name = "mirakurun-check-services"
version = "1.0.0"
authors = ["StarryBlueSky <letter@starry.blue>"]
edition = "2018"
publish = false

[dependencies]
reqwest = { version = "0.13.0", features = ["blocking", "json"] }
clap = { version = "4.0.0", features = ["derive", "env", "cargo"] }
mirakurun-client-common = { path = "../common" }
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.38"
serde = { version = "1.0.200", features = ["derive"] }
