[package]
name = "mirakurun-client"
version = "1.0.0"
authors = ["StarryBlueSky <letter@starry.blue>"]
edition = "2018"
publish = false

[dependencies]
reqwest = { version = "0.13.0", features = ["blocking"] }
clap = { version = "4.0.0", features = ["derive", "env", "cargo"] }
mirakurun-client-common = { path = "../common" }
