[package]
name = "mirakurun-client-common"
version = "1.0.0"
authors = ["StarryBlueSky <letter@starry.blue>"]
edition = "2018"
publish = false

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
