[package]
name = "mirakurun-client-common"
version = "1.0.0"
authors = ["StarryBlueSky <letter@starry.blue>"]
edition = "2018"
publish = false

[dependencies]
reqwest = { version = "0.12.4", features = ["blocking"] }
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
serde_yaml = "0.9"
